QML: Fix typeof context property.

This was missing from f21e8c641af6b2d10f0d7e7e0fc6a755dab3673c.

Task-number: QTBUG-48524
Change-Id: I5cc6a979d965a1ef6b7fbc916a7ca9df868b459a
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>